src/components/App.scss
.app {
  @include no-select;

  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;

  .paster, .drawer, .renderer, .canvas {
    position: fixed;
    inset: 0;
    height: 100%;
  }

  &:has(.drawer.has-pen-down) .renderer {
    @include easing(120ms, (filter, opacity));
    opacity: 0.3;
    filter: blur(5px);
  }

  .toolbar {
    position: fixed;
    z-index: 2;
    inset: var(--gutter) var(--gutter) auto var(--gutter);
  }

  .timeline {
    position: fixed;
    z-index: 2;
    inset: auto var(--gutter) var(--gutter) var(--gutter);
  }

  &[data-view-mode='no-ui'] {
    .toolbar > * > *:not(.view-mode) {
      display: none;
    }

    .view-mode .button {
      border: none;
    }

    .timeline:not(:hover) {
      pointer-events: none;
      opacity: 0;
    }
  }
}

